# sanitizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
sanitizer/: __init__.py  analyzer.py  config.py  loader.py  logging_config.py  models.py  synthesizer.py  ui.py  validator.py  writer.py
test_data/: customers.xlsx  orders.xlsx  products.xlsx
test_output/: customers.xlsx  orders.xlsx  products.xlsx
tests/: conftest.py  test_analyzer.py  test_config.py  test_security.py  test_synthesizer.py  test_validator.py  test_writer.py
